# MyVogl

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindJpeg.cmake  FindPthreads.cmake  FindSDL2.cmake  UtilityMacros.cmake  build_options.cmake
src/: CMakeLists.txt
src/common/: channelmgr.cpp  launchsteamgame.cpp  listfiles.cpp  mtqueue.cpp
src/extlib/pxfmt/: CMakeLists.txt  KTX.sln  KTX.vcxproj
src/glxspheres/: CMakeLists.txt
src/ktxtool/: CMakeLists.txt
src/voglbench/: CMakeLists.txt
src/voglcommon/: CMakeLists.txt
src/voglcore/: CMakeLists.txt  stb_malloc.cpp  stb_malloc.h  vogl_ryg_dxt.hpp  vogl_ryg_types.hpp  vogl_utils.h  vogl_winhdr.h
src/vogleditor/: CMakeLists.txt
src/voglgen/: CMakeLists.txt
src/voglreplay/: CMakeLists.txt
src/voglserver/: CMakeLists.txt  server.cpp
src/vogltest/: CMakeLists.txt
src/vogltrace/: CMakeLists.txt
